--- a/Car_data_collection.ipynb
+++ b/Car_data_collection.ipynb
@@ -33,6 +33,7 @@
     }
    ],
    "source": [
+    "# Installing the  selenium \n",
     "!pip install selenium"
    ]
   },
@@ -43,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing important libraries\n",
     "import selenium\n",
     "import pandas as pd\n",
     "from selenium import webdriver\n",
@@ -61,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Getting the web driver\n",
     "driver=webdriver.Chrome(r'C:\\Users\\DELL\\chromedriver_win32\\chromedriver')"
    ]
   },
@@ -71,6 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Opening the desired webpage\n",
     "driver.get(\"https://www.cars24.com/buy-used-cars-delhi-ncr/\")"
    ]
   },
@@ -92,6 +96,7 @@
     }
    ],
    "source": [
+    "# Scraping  the Brand Information\n",
     "brand_name=[]\n",
     "brand_tag= driver.find_elements(By.CLASS_NAME, \"_3FpCg\")\n",
     "for _ in range(20):\n",
@@ -120,6 +125,7 @@
     }
    ],
    "source": [
+    "# Separating the Model from Scraped brand information\n",
     "model=[]\n",
     "for _ in range(20):\n",
     "    driver.execute_script(\"window.scrollBy(0,1000)\")\n",
@@ -147,6 +153,7 @@
     }
    ],
    "source": [
+    "# Scraping the variant information\n",
     "variant=[]\n",
     "variant_tag=driver.find_elements(By.CLASS_NAME, \"cvakB\")\n",
     "for _ in range(20):\n",
@@ -175,6 +182,7 @@
     }
    ],
    "source": [
+    "# scraping driven Km information\n",
     "driven_km=[]\n",
     "mile_tag=driver.find_elements(By.XPATH,'//ul[@class= \"bVR0c\"]/li[1]')\n",
     "for _ in range(20):\n",
@@ -203,6 +211,7 @@
     }
    ],
    "source": [
+    "# scraping owners deatils\n",
     "owner=[]\n",
     "owner_tag=driver.find_elements(By.XPATH,'//ul[@class= \"bVR0c\"]/li[2]')\n",
     "for _ in range(20):\n",
@@ -231,6 +240,7 @@
     }
    ],
    "source": [
+    "# scraping fuel type details\n",
     "fuel=[]\n",
     "fuel_tag=driver.find_elements(By.XPATH,'//ul[@class= \"bVR0c\"]/li[3]')\n",
     "for _ in range(20):\n",
@@ -259,6 +269,7 @@
     }
    ],
    "source": [
+    "# Srcaping year of manufacturing information\n",
     "year=[]\n",
     "for _ in range(20):\n",
     "    driver.execute_script(\"window.scrollBy(0,1000)\")\n",
@@ -286,6 +297,7 @@
     }
    ],
    "source": [
+    "# From variant we need to separate info about the transmission type of car\n",
     "transmission=[]\n",
     "for _ in range(20):\n",
     "    driver.execute_script(\"window.scrollBy(0,1000)\")\n",
@@ -313,6 +325,7 @@
     }
    ],
    "source": [
+    "# Scraping the price deatils \n",
     "price=[]\n",
     "price_tag=driver.find_elements(By.XPATH,'//div[@class=\"_7udZZ\"]/span[1]')\n",
     "for _ in range(20):\n",
@@ -341,6 +354,7 @@
     }
    ],
    "source": [
+    "# Adding additional column, named Location, as since now our data is collected from Delhi NCR location\n",
     "location=[]\n",
     "for i in range(len(price)):\n",
     "    location.append(\"Delhi NCR\")\n",
@@ -354,6 +368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# getting the webpage for chennai location in car24 site\n",
     "driver.get(\"https://www.cars24.com/buy-used-car?sort=P&storeCityId=5732&pinId=600001\")"
    ]
   },
@@ -372,11 +387,12 @@
     }
    ],
    "source": [
+    "# we will add the details in already existing columns\n",
     "brand_name=brand_name[:5740]\n",
     "model=model[:5740]\n",
     "year=year[:5740]\n",
     "\n",
-    "\n",
+    "# From one web element we can scrape and separate all the relevant information about brand, model and manufacturing year \n",
     "brand_tag= driver.find_elements(By.CLASS_NAME, \"_3FpCg\")\n",
     "for _ in range(20):\n",
     "    driver.execute_script(\"window.scrollBy(0,1000)\")\n",
@@ -403,8 +419,11 @@
     }
    ],
    "source": [
+    "# adding data in the same list \n",
     "variant= variant[:5740]\n",
     "transmission= transmission[:5740]\n",
+    "\n",
+    "# from variant tag we can scrape and collect info about variant and transmission\n",
     "variant_tag=driver.find_elements(By.CLASS_NAME, \"cvakB\")\n",
     "for _ in range(20):\n",
     "    driver.execute_script(\"window.scrollBy(0,1000)\")\n",
@@ -433,6 +452,7 @@
     }
    ],
    "source": [
+    "# scrapping and adding the information about transmission of car in same transmission list\n",
     "transmission= transmission[:5740]\n",
     "for _ in range(20):\n",
     "    driver.execute_script(\"window.scrollBy(0,1000)\")\n",
@@ -468,6 +488,7 @@
     }
    ],
    "source": [
+    "#Scraping and adding information about driven km in same driven km list\n",
     "driven_km=driven_km[:5740]\n",
     "mile_tag=driver.find_elements(By.XPATH,'//ul[@class= \"bVR0c\"]/li[1]')\n",
     "for _ in range(20):\n",
@@ -496,6 +517,7 @@
     }
    ],
    "source": [
+    "# scraping and adding information of owners in Owners list\n",
     "owner_tag=driver.find_elements(By.XPATH,'//ul[@class= \"bVR0c\"]/li[2]')\n",
     "for _ in range(20):\n",
     "    driver.execute_script(\"window.scrollBy(0,1000)\")\n",
@@ -523,6 +545,7 @@
     }
    ],
    "source": [
+    "# Scraping and adding info about Fuel in fuel list\n",
     "fuel_tag=driver.find_elements(By.XPATH,'//ul[@class= \"bVR0c\"]/li[3]')\n",
     "for _ in range(20):\n",
     "    driver.execute_script(\"window.scrollBy(0,1000)\")\n",
@@ -550,6 +573,7 @@
     }
    ],
    "source": [
+    "# scraping and adding info about Price in price list and here we also add location as chennai in the newly add rows.\n",
     "price_tag=driver.find_elements(By.XPATH,'//div[@class=\"_7udZZ\"]/span[1]')\n",
     "for _ in range(20):\n",
     "    driver.execute_script(\"window.scrollBy(0,1000)\")\n",
